fix: z-index 수정

--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -1,7 +1,7 @@
 /* sidebar.css */
 .sidebar {
   position: relative;
-  z-index: 200;
+  z-index: 1000;
   width: 70px;
   height: 100vh;
   background-color: #00489F;
